Initial sketch of Tempo API
